--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,26 +2,26 @@
   <h2>Rental</h2>
   <div class="mb-3">
     <label for="rentaiId" class="form-label">Rental ID</label>
-    <input type="text" class="form-control" id="rentaiId" placeholder="id">
+    <input type="text" class="form-control" id="rentaiId" placeholder="id" [(ngModel)]="rental.id">
   </div>
   <div class="mb-3">
     <label for="rentaldate" class="form-label">Rental date</label>
-    <input type="date" class="form-control" id="rentaldate" placeholder="rental date">
+    <input type="date" class="form-control" id="rentaldate" placeholder="rental date" [(ngModel)]="rental.rentalDate">
   </div>
   <div class="mb-3">
     <label for="returndate" class="form-label">Return date</label>
-    <input type="date" class="form-control" id="returndate" placeholder="return date">
+    <input type="date" class="form-control" id="returndate" placeholder="return date"[(ngModel)]="rental.returnDate">
   </div>
   <div class="mb-3">
     <label for="duedate" class="form-label">Due Date</label>
-    <input type="date" class="form-control" id="duedate" placeholder="Due date">
+    <input type="date" class="form-control" id="duedate" placeholder="Due date"[(ngModel)]="rental.dueDate">
   </div>
   <div class="mb-3">
     <label for="totalcost" class="form-label">Total cost</label>
-    <input type="email" class="form-control" id="totalcost" placeholder="totalcost">
+    <input type="email" class="form-control" id="totalcost" placeholder="totalcost"[(ngModel)]="rental.totalCost">
   </div>
   <div class="d-flex">
-    <button>Add</button>
+    <button (click)="add()">Add</button>
     <button>Update</button>
     <button>Edit</button>
     <button>search</button>
