--- a/src/app/rental-form/rental-form.component.html
+++ b/src/app/rental-form/rental-form.component.html
@@ -1,1 +1,30 @@
-<p>rental-form works!</p>
+<div class="container mt-5">
+    <h2>Hardwere items</h2>
+    <div class="mb-3">
+      <label for="rentaiId" class="form-label">Item id</label>
+      <input type="text" class="form-control" id="rentaiId" placeholder="id" [(ngModel)]="item.id">
+    </div>
+    <div class="mb-3">
+      <label for="rentaldate" class="form-label">Name</label>
+      <input type="text" class="form-control" id="rentaldate" placeholder="rental date" [(ngModel)]="item.name">
+    </div>
+    <div class="mb-3">
+      <label for="returndate" class="form-label">Rental Per day</label>
+      <input type="text" class="form-control" id="returndate" placeholder="return date"[(ngModel)]="item.rentalPreDay">
+    </div>
+    <div class="mb-3">
+      <label for="duedate" class="form-label">Fine per day</label>
+      <input type="text" class="form-control" id="duedate" placeholder="Due date"[(ngModel)]="item.finePerDay">
+    </div>
+    <div class="mb-3">
+      <label for="totalcost" class="form-label">Availibility</label>
+      <input type="text" class="form-control" id="totalcost" placeholder="totalcost"[(ngModel)]="item.availability">
+    </div>
+    <div class="d-flex">
+      <button (click)="add()">Add</button>
+      <button>Update</button>
+      <button>Edit</button>
+      <button>search</button>
+    </div>
+    
+  </div>
