--- a/src/app/rental-form/rental-form.component.html
+++ b/src/app/rental-form/rental-form.component.html
@@ -22,9 +22,9 @@
     </div>
     <div class="d-flex">
       <button (click)="add()">Add</button>
-      <button>Update</button>
-      <button>Edit</button>
-      <button>search</button>
+      <button (click)="update(id)">Update </button>
+      <button (click)="delete(id)">Delete</button>
+      <button (click)="search(id)">search</button>
     </div>
     
   </div>
