--- a/src/app/rental-detailform/rental-detailform.component.html
+++ b/src/app/rental-detailform/rental-detailform.component.html
@@ -15,9 +15,9 @@
     
     <div class="d-flex">
       <button (click)="add()">Add</button>
-      <button>Update</button>
-      <button>Edit</button>
-      <button>search</button>
+      <button (click)="delete">Delete</button>
+      <button (click)="edit">Edit</button>
+      <button (click)="search">search</button>
     </div>
     
   </div>
